# duoyinzi_MCP

./: .gitignore  CHANGELOG.md  MEMORY_STORAGE_SUMMARY.md  MODULE_STRUCTURE.md  QUICK_REFERENCE.md  README.md  main.py  main_old.py  mcp.json  pyproject.toml  test_grade_assessment.py  函数分类.md
.github/workflows/: release.yml
modules/: __init__.py
modules/algorithm_layer/: __init__.py  grade_comprehensive_assessment.py  membership_functions.py  topsis_comprehensive_evaluation.py  vikor_comprehensive_evaluation.py
modules/data_layer/: __init__.py  field_analyzer.py  file_parser.py
modules/interaction_layer/: __init__.py  prompt_templates.py
resources/: __init__.py
resources/sample_data/: sample_dataset.csv
test_resources/: test_topsis.csv
